--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,11 @@ services:
       watch:
         - action: sync
           path: ../bot
+          target: /app/bot
+          ignore:
+            - .venv/
+        - action: sync
+          path: ../main.py
           target: /app
           ignore:
             - .venv/
