feat(bot): add larpmanager models
Signed-off-by: Marin Hannache <git@mareo.fr>

--- a/.envrc
+++ b/.envrc
@@ -9,3 +9,7 @@ eval "$(devbox generate direnv --print-envrc)"
 # for more details
 
 export DISCORD_BOT_TOKEN_FILE="$(pwd)/secrets/discord-bot-token"
+export MYSQL_HOST=localhost:30202
+export MYSQL_USER=admin
+export MYSQL_PASSWORD=password
+export MYSQL_DATABASE=larpm
